k8s/apps/minio-service.yaml
# minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      name: api
    - port: 9001
      targetPort: 9001
      name: console
  selector:
    app: minio
