k8s/apps/music-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-server
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-server
  template:
    metadata:
      labels:
        app: music-server
    spec:
      containers:
      - name: api
        image: ousmanekk/music-api:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: music-server
  namespace: apps
spec:
  ports:
  - port: 80
    targetPort: 10000
  selector:
    app: music-server
