k8s/apps/psql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: apps
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
