k8s/apps/ingress.yaml
# Middleware pour redirection HTTPS
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: certs
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
# API
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-route
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-secret
  routes:
  - match: Host(`api.okloud-hub.com`)
    kind: Rule
    services:
    - name: music-server
      port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.okloud-hub.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.okloud-hub.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: tls-secret
   
---
# Longhorn
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-route
  namespace: storage
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "certs-redirect-https@kubernetescrd"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-secret
  routes:
  - match: Host(`longhorn.okloud-hub.com`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
