k8s/apps/minio-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.okloud-hub.com`)
      kind: Rule
      services:
        - name: minio
          port: 9000
  tls:
    secretName: tls-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio-console.okloud-hub.com`)
      kind: Rule
      services:
        - name: minio
          port: 9001
  tls:
    secretName: tls-secret
